--- a/templates/privacy-policy.html
+++ b/templates/privacy-policy.html
@@ -12,9 +12,11 @@
                 <div class="row mb-2">
                     <div class="col-12 my-2 mt-xl-4 d-grid d-md-block">
                         <a class="btn btn-outline-primary" href="/blog.html" role="button">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-                              </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-chevron-left" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                            </svg>
                             <span id="post_back" class="langkey">Zurück</span>
                         </a>
                     </div>
@@ -23,21 +25,217 @@
 
                 </div>
                 <div class="row">
-                    <div class="col-12 col-md-8 col-xl-8 order-2 order-md-1 py-2 mb-4">
+                    <div class="col-12 col-md-9 order-2 order-md-1 py-2 mb-4">
                         <div class="postcontent p-3">
-                            <!-- mardown content from privacy.md -->
+                            <h1 class="langkey" id="privacy_head">Datenschutz</h1>
+                            <h2 class="langkey" id="privacy_basics_head">Grundlegendes</h2>
+                            <p class="langkey" id="privacy_basics_content">
+                                Diese Datenschutzerklärung soll die Nutzer dieser Website über die Art,
+                                den Umfang und den Zweck der Erhebung und Verwendung personenbezogener Daten
+                                durch den Websitebetreiber Niklas Stephan informieren.<br><br>
+                                Der Websitebetreiber nimmt Ihren Datenschutz sehr ernst und behandelt
+                                Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Vorschriften.
+                                Da durch neue Technologien und die ständige Weiterentwicklung dieser Webseite Änderungen
+                                an dieser Datenschutzerklärung vorgenommen werden können,
+                                empfehlen wir Ihnen sich die Datenschutzerklärung in regelmäßigen Abständen
+                                wieder durchzulesen.<br><br>
+                                Definitionen der verwendeten Begriffe (z.B. “personenbezogene Daten” oder
+                                “Verarbeitung”)
+                                finden Sie in Art. 4 DSGVO.
+                            </p>
+                            <h2 class="langkey" id="privacy_serverlogs_head">Zugriffsdaten</h2>
+                            <p class="langkey" id="privacy_serverlogs_content">
+                                Wir, der Websitebetreiber bzw. Seitenprovider, erheben aufgrund unseres berechtigten
+                                Interesses (s. Art. 6 Abs. 1 lit. f. DSGVO) Daten über Zugriffe auf die Website und
+                                speichern diese
+                                als „Server-Logfiles“ auf dem Server der Website ab. Folgende Daten werden so
+                                protokolliert:
+                            <ul>
+                                <li>Besuchte Website</li>
+                                <li>Uhrzeit zum Zeitpunkt des Zugriffes</li>
+                                <li>Menge der gesendeten Daten in Byte</li>
+                                <li>Quelle/Verweis, von welchem Sie auf die Seite gelangten</li>
+                                <li>Verwendeter Browser</li>
+                                <li>Verwendetes Betriebssystem</li>
+                                <li>Verwendete IP-Adresse</li>
+                            </ul>
+                            Die Server-Logfiles werden für maximal 7 Tage gespeichert und anschließend gelöscht.
+                            Die Speicherung der Daten erfolgt aus Sicherheitsgründen,
+                            um z. B. Missbrauchsfälle aufklären zu können. Müssen Daten aus Beweisgründen
+                            aufgehoben werden, sind sie solange von der Löschung ausgenommen bis der Vorfall
+                            endgültig geklärt ist.
+                            </p>
+                            <h2 class="langkey" id="privacy_cookies_head">Cookies</h2>
+                            <p class="langkey" id="privacy_cookies_content">
+                                Bei Cookies handelt es sich um kleine Dateien, welche auf Ihrem Endgerät gespeichert
+                                werden.
+                                Ihr Browser greift auf diese Dateien zu. <br>
+                                Durch den Einsatz von Cookies erhöht sich die Benutzerfreundlichkeit und Sicherheit
+                                dieser Website.
+                                <br><br>
+
+                                Gängige Browser bieten die Einstellungsoption, Cookies nicht zuzulassen. <br>
+                                Hinweis: Es ist nicht gewährleistet,
+                                dass Sie auf alle Funktionen dieser Website ohne Einschränkungen zugreifen können,
+                                wenn Sie entsprechende Einstellungen vornehmen.<br><br>
+
+                                Folgende Cookies werden genutzt:
+                                <ul>
+                                    <li>gdpr: Merker ob Cookie Hinweis akzeptiert wurde</li>
+                                    <li>userlang: Merker welche Sprache der Website genutzt wird</li>
+                                </ul>
+                            </p>
+                            <h2 class="langkey" id="privacy_personal_head">Erfassung und Verarbeitung personenbezogener
+                                Daten</h2>
+                            <p class="langkey" id="privacy_personal_content">
+                                Der Websitebetreiber erhebt, nutzt und gibt Ihre personenbezogenen Daten nur dann
+                                weiter,
+                                wenn dies im gesetzlichen Rahmen erlaubt ist oder Sie in die Datenerhebung
+                                einwilligen.<br><br>
+
+                                Als personenbezogene Daten gelten sämtliche Informationen, welche dazu dienen,
+                                Ihre Person zu bestimmen und welche zu Ihnen zurückverfolgt werden können –
+                                also beispielsweise Ihr Name, Ihre E-Mail-Adresse und Telefonnummer.<br><br>
+
+                                Diese Website können Sie auch besuchen, ohne Angaben zu Ihrer Person zu machen.
+                                Zur Verbesserung unseres Online-Angebotes speichern wir jedoch (ohne Personenbezug)
+                                Ihre Zugriffsdaten auf diese Website. Zu diesen Zugriffsdaten gehören
+                                z. B. die von Ihnen angeforderte Datei oder der Name Ihres Internet-Providers. <br>
+                                Durch die Anonymisierung der Daten sind Rückschlüsse auf Ihre Person nicht möglich.
+                            </p>
+                            <h2 class="langkey" id="privacy_matomo_head">Opt-Out für Webanalytics</h2>
+                            <iframe
+        style="border: 0; height: 100%; width: 100%;"
+        src="https://stats.handtrixxx.com/index.php?module=CoreAdminHome&action=optOut&language=de&backgroundColor=f8f9fa&fontColor=212529&fontSize=1rem&fontFamily=arial"
+        ></iframe>
+
+                            <h2 class="langkey" id="privacy_comments_head">Umgang mit Kommentaren und Beiträgen</h2>
+                            <p class="langkey" id="privacy_comments_content">
+                                Hinterlassen Sie auf dieser Website einen Beitrag oder Kommentar,
+                                wird Ihre IP-Adresse gespeichert. <br>
+                                Dies erfolgt aufgrund unserer berechtigten Interessen im Sinne des Art. 6 Abs. 1 lit. f.
+                                DSGVO und dient der Sicherheit von uns als Websitebetreiber:
+                                Denn sollte Ihr Kommentar gegen geltendes Recht verstoßen,
+                                können wir dafür belangt werden, weshalb wir ein Interesse an der Identität des
+                                Kommentar- bzw. Beitragsautors haben.
+                            </p>
+                            <h2 class="langkey" id="privacy_rights_head">Rechte des Nutzers</h2>
+                            <p class="langkey" id="privacy_rights_content">
+                                Sie haben als Nutzer das Recht, auf Antrag eine kostenlose Auskunft darüber
+                                zu erhalten, welche personenbezogenen Daten über Sie gespeichert wurden.
+                                Sie haben außerdem das Recht auf Berichtigung falscher Daten und auf die
+                                Verarbeitungseinschränkung oder Löschung Ihrer personenbezogenen Daten. Falls
+                                zutreffend,
+                                können Sie auch Ihr Recht auf Datenportabilität geltend machen.
+                                Sollten Sie annehmen, dass Ihre Daten unrechtmäßig verarbeitet wurden,
+                                können Sie eine Beschwerde bei der zuständigen Aufsichtsbehörde einreichen.<br><br>
+
+                                <strong>Löschung von Daten</strong><br>
+                                Sofern Ihr Wunsch nicht mit einer gesetzlichen Pflicht zur Aufbewahrung von
+                                Daten (z. B. Vorratsdatenspeicherung) kollidiert,
+                                haben Sie ein Anrecht auf Löschung Ihrer Daten. Von uns gespeicherte Daten werden,
+                                sollten sie für ihre Zweckbestimmung nicht mehr vonnöten sein und es keine
+                                gesetzlichen Aufbewahrungsfristen geben, gelöscht. Falls eine Löschung nicht
+                                durchgeführt werden kann, da die Daten für zulässige gesetzliche Zwecke erforderlich
+                                sind,
+                                erfolgt eine Einschränkung der Datenverarbeitung. In diesem Fall werden
+                                die Daten gesperrt und nicht für andere Zwecke verarbeitet.
+                                <br><br>
+                                    <strong>Widerspruchsrecht</strong><br>
+                                    Nutzer dieser Webseite können von ihrem Widerspruchsrecht Gebrauch machen
+                                    und der Verarbeitung ihrer personenbezogenen Daten zu jeder Zeit widersprechen.<br>
+
+                                    Wenn Sie eine Berichtigung, Sperrung, Löschung oder Auskunft über die zu
+                                    Ihrer Person gespeicherten personenbezogenen Daten wünschen oder Fragen bzgl.
+                                    der Erhebung, Verarbeitung oder Verwendung Ihrer personenbezogenen Daten haben oder
+                                    erteilte Einwilligungen widerrufen möchten,
+                                    wenden Sie sich bitte an folgende E-Mail-Adresse: postmaster@niklas-stephan.de
+
+                            </p>
+                            <h1 class="langkey" id="imprint_head">Impressum</h1>
+                            <p class="langkey" id="imprint_content">
+                                Angaben gemäß § 5 TMG<br><br>
+                                Niklas Stephan<br>
+                                Elgershäuser Straße 1<br>
+                                34131 Kassel<br><br>
+                                <strong>Vertreten durch:</strong><br>
+                                Niklas Stephan<br><br>
+                                <strong>Kontakt:</strong><br>
+                                postmaster@niklas-stephan.de<br><br>
+                                <strong>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</strong><br>
+                                Niklas Stephan<br>
+                                Elgershäuser Straße 1<br>
+                                34131 Kassel<br><br>
+                                <strong>Haftungsausschluss:</strong><br><br>
+                                <strong>Haftung für Inhalte</strong><br>
+                                Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. 
+                                Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können 
+                                wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir 
+                                gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den 
+                                allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als 
+                                Diensteanbieter jedoch nicht verpflichtet, 
+                                übermittelte oder gespeicherte fremde Informationen zu überwachen 
+                                oder nach Umständen zu forschen, die auf eine 
+                                rechtswidrige Tätigkeit hinweisen. 
+                                Verpflichtungen zur Entfernung oder Sperrung der Nutzung von 
+                                Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. 
+                                Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt 
+                                der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden 
+                                von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
+                                <br><br>
+                                <strong>Haftung für Links</strong><br> 
+                                Unser Angebot enthält Links zu externen Webseiten Dritter, 
+                                auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für 
+                                diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der 
+                                verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der 
+                                Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der 
+                                Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte 
+                                waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente 
+                                inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete 
+                                Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von
+                                Rechtsverletzungen werden wir derartige Links umgehend entfernen.<br> <br> 
+                                <strong>Urheberrecht</strong><br> 
+                                Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten 
+                                unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, 
+                                Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes 
+                                bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. 
+                                Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen 
+                                Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt 
+                                wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden 
+                                Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine 
+                                Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. 
+                                Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
+                            </p>
+
+
 
                         </div>
 
                     </div>
 
-                    <div class="col-12 col-md-4 col-xl4 order-1 order-md-2 mb-2">
+                    <div class="col-12 col-md-3 order-1 order-md-2 mb-2">
                         <div class="container-fluid px-0 h-100">
                             <div class="row sticky-top">
-                                <div class="col-12 col-sm-6 col-md-12">
+                                <div class="col-12">
                                     <nav id="postspy" class="flex-column align-items-stretch py-2 my-2">
                                         <h5 class="ps-3 langkey" id="post_content">Inhalt</h5>
                                         <nav id="spylinks" class="nav flex-column">
+                                            <a class="nav-link langkey" id="privacy_nav_basics"
+                                                href="#privacy_basics_head">Grundlegendes</a>
+                                            <a class="nav-link langkey" id="privacy_nav_serverlogs"
+                                                href="#privacy_serverlogs_head">Zugriffsdaten</a>
+                                            <a class="nav-link langkey" id="privacy_nav_cookies"
+                                                href="#privacy_cookies_head">Cookies</a>
+                                            <a class="nav-link langkey" id="privacy_nav_personal"
+                                                href="#privacy_personal_head">personenbezogene Daten</a>
+                                            <a class="nav-link langkey" id="privacy_nav_matomo"
+                                                href="#privacy_matomo_head">Opt-Out Webanalytics</a>
+                                            <a class="nav-link langkey" id="privacy_nav_comments"
+                                                href="#privacy_comments_head">Kommentare und Beiträge</a>
+                                            <a class="nav-link langkey" id="privacy_nav_rights"
+                                                href="#privacy_rights_head">Rechte des Nutzers</a>   
+                                                <a class="nav-link langkey" id="privacy_nav_imprint"
+                                                href="#imprint_head">Impressum</a>  
                                         </nav>
                                     </nav>
                                 </div>
@@ -59,11 +257,6 @@
 
 
     <!-- Javascript from script.html snipppet -->
-
-    <!-- Scrollspy Generation and Syntax Highlighting -->
-    <script>
-        postspy();
-    </script>
 
 
 </body>
