--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <div class="container-lg pt-5" id="introcontent">
             <div class="row">
                 <div class="col-12 pt-3 d-flex align-items-center justify-content-center justify-content-xl-start">
-                    <div class="d-grid gap-4">
+                    <div class="d-grid gap-4" id="teaserbuttons">
                         <a class="btn btn-lg btn-primary" href="/blog.html" role="button">
                             <span id="index_projectsblog" class="langkey">Projekte & Blog</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -34,7 +34,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- Section CV  -->
     <section id="cv" class="d-flex align-items-center justify-content-center text-center">
