--- a/templates/post.html
+++ b/templates/post.html
@@ -132,7 +132,7 @@
     <!-- Javascript from script.html snipppet -->
     <script src="/assets/js/highlight.min.js"></script>
 
-    <!-- Scrollspy Generation and Syntax Highlighting -->
+    <!-- Scrollspy Generation and Syntax Highlighting, image links -->
     <script>
         postspy();
         hljs.highlightAll();
