--- a/templates/index.html
+++ b/templates/index.html
@@ -199,22 +199,21 @@
                     <div class="card cv-card d-flex align-items-center bo-green">
                         <div class="card-header bg-green">Bachelor of Arts (B.A.)</div>
                         <div class="card-body">
-                            <p class="card-text"><strong>Bachelor-Thesis</strong></p>
-                            <p class="card-text">
+                            <ul class="text-start">
+                                <li><strong>Bachelor-Thesis</strong><br>
                                 Analyse der bestehenden und geeigneter
                                 Serversystemplattformen für den Rechenzentrumsbetrieb der B. Braun
                                 Melsungen AG
-                            </p>
-                            <p class="card-text"><strong>Fallstudie "International Investment</strong>
-                                Decisions"</p>
-                            <p class="card-text">Investitionen eines global agierenden
-                                Unternehmens am Standort Brasilien</p>
-                            <p class="card-text"><strong>Fallstudie "Introducing New
-                                    Products"</strong></p>
-                            <p class="card-text"> Krombachers Fassbrause
+                                </li>
+                                <li>
+                                    <strong>Case Study International Investment Decisions</strong><br>
+                                Investitionen eines global agierenden Unternehmens am Standort Brasilien
+                                </li>
+                                <li><strong>Case Study Introducing New Products</strong><br>
+                                    Krombachers Fassbrause
 
-
-                            </p>
+                                </li>
+                            </ul>                
                         </div>
                         <div class="card-footer">
                             <span id="index_09120813" class="langkey">September 2012 bis August
@@ -233,11 +232,9 @@
                     <div class="vl-green"></div>
                     <div class="card cv-card d-flex align-items-center bo-green">
                         <div class="card-header bg-green">Informatik-Betriebswirt (VWA)</div>
-                        <div class="card-body">
-                            <p class="card-text">
-                                <strong>Abschlussarbeit</strong>
-                            </p>
-                            <p class="card-text">
+                        <div class="card-body ">
+                            <p class="card-text text-start">
+                                <strong>Thesis</strong><br>                            
                                 Erstellen eines Sicherheitsplans für die
                                 Microsoft SQL Server Datenbanksystemlandschaft der B. Braun Melsungen AG
                             </p>
@@ -260,10 +257,9 @@
                     <div class="card cv-card d-flex align-items-center bo-green">
                         <div class="card-header bg-green">IT-System-Ökonom (VWA)</div>
                         <div class="card-body">
-                            <p class="card-text">
-                                <strong>Projektarbeit</strong>
-                            </p>
-                            <p class="card-text">
+                            <p class="card-text text-start">
+                                <strong>Projektarbeit</strong><br>
+                           
                                 Aufbau eines OLAP-basierten Reportings zur
                                 Analyse und Überwachung systemnaher Leistungsindikatoren der
                                 E-Recruiting-Systemlandschaft bei der B. Braun Melsungen AG
@@ -288,11 +284,10 @@
                     <div class="vl-green"></div>
                     <div class="card cv-card d-flex align-items-center bo-green">
                         <div class="card-header bg-green">Fachinformatiker für Systemintegration (IHK)</div>
-                        <div class="card-body">
-                            <p class="card-text">
-                                <strong>Abschlussarbeit</strong>
-                            </p>
-                            <p class="card-text">
+                        <div class="card-body text-start">
+                            <p class="card-text text-start">
+                                <strong>Abschlussarbeit</strong><br>
+                            
                                 Absicherung einer Netzwerkverbindung mit OpenVPN
                             </p>
 
@@ -313,12 +308,10 @@
                     <div class="vl-green"></div>
                     <div class="card cv-card d-flex align-items-center bo-green">
                         <div class="card-header bg-green">Allgemeine Fachhochschulreife</div>
-                        <div class="card-body">
-                            <p class="card-text">
-                                <strong>Fachrichtung Wirtschaft</strong>
-                            </p>
-
-                            <p class="card-text">
+                        <div class="card-body text-start">
+                            <p class="card-text text-start">
+                                <strong>Fachrichtung Wirtschaft</strong><br>
+                         
                                 Schwerpunkt Wirtschaftsinformatik
 
                             </p>
