--- a/templates/blog.html
+++ b/templates/blog.html
@@ -155,6 +155,11 @@
   // Draw all Posts sorted by Date descending
   sort('default');
   </script>
+
+  <script>
+    //convert postdates
+    blogdateConvert();
+  </script>
 <style>
   .btn:active, .btn.active {
     color: var(--bs-orange) !important;
