--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,6 +356,11 @@ footer {
     background-color: var(--bs-gray-900);
 }
 
+blockquote {
+    border-left: 1px solid var(--bs-gray-700);
+    padding-left: 12px;
+}
+
 /*Helpers*/
 .bg-theme {
     background-color: var(--nc-theme);
