--- a/templates/post.html
+++ b/templates/post.html
@@ -79,10 +79,13 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-9 col-xl-9 order-2 order-md-1 py-2 mb-4">
+                       
                         <div class="postcontent p-3">
+                            
                             <h1>
                                 <!-- Post Headline -->
                             </h1>
+                            <!-- postdate -->
                             <!-- mardown content from posts -->
 
                         </div>
@@ -136,6 +139,7 @@
     <script>
         postspy();
         hljs.highlightAll();
+        postdateConvert();
     </script>
 
     <!-- Remark42 Comments-->
@@ -148,7 +152,6 @@
         }
     </script>
     <script>!function(e,n){for(var o=0;o<e.length;o++){var r=n.createElement("script"),c=".js",d=n.head||n.body;"noModule"in r?(r.type="module",c=".mjs"):r.async=!0,r.defer=!0,r.src=remark_config.host+"/web/"+e[o]+c,d.appendChild(r)}}(remark_config.components||["embed"],document);</script>
-
 
 </body>
 
