--- a/templates/index.html
+++ b/templates/index.html
@@ -4,25 +4,25 @@
     <!-- Scrollbar -->
     <nav id="scrollbar" class="navbar d-none d-md-flex">
         <nav class="nav nav-pills flex-column">
-            <a class="nav-link nav-link-scrollbar py-1" href="#intro">
+            <a class="nav-link nav-link-scrollbar py-1" href="#intro" aria-label="Link to Intro Section">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle"
                     viewBox="0 0 16 16">
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
                 </svg>
             </a>
-            <a class="nav-link nav-link-scrollbar py-1" href="#cv">
+            <a class="nav-link nav-link-scrollbar py-1" href="#cv" aria-label="Link to CV Section">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle"
                     viewBox="0 0 16 16">
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
                 </svg>
             </a>
-            <a class="nav-link nav-link-scrollbar py-1" href="#education">
+            <a class="nav-link nav-link-scrollbar py-1" href="#education" aria-label="Link to Education Section">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle"
                     viewBox="0 0 16 16">
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
                 </svg>
             </a>
-            <a class="nav-link nav-link-scrollbar py-1" href="#contact">
+            <a class="nav-link nav-link-scrollbar py-1" href="#contact" aria-label="Link to Contact Section">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle"
                     viewBox="0 0 16 16">
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
@@ -339,7 +339,7 @@
         <div class="container-fluid" id="contactcontent">
             <div class="row">
                 <div class="col-12 col-lg-4 px-0 order-2 order-lg-1 text-start">
-                    <img id="nsdeimg" alt="Niklas Stephan" src="/media/webPro.webp" class="">
+                    <img id="nsdeimg" alt="Niklas Stephan" src="/media/full/webPro.webp" class="">
                 </div>
                 <div
                     class="col-12 col-lg-4 order-1 order-lg-2 px-0 d-flex align-items-center justify-content-center cardlinks my-4">
